import * as fs from 'node:fs';
import * as path from 'node:path';
import { swiftFileUpdater } from '../src/withIosConfiguration';

describe('withIosConfiguration', function () {
  beforeEach(function () {
    jest.resetAllMocks();
  });

  it('updates the AppDelegate52.swift with the method implementation having public override when sdk is <= 52', async function () {
    const appDelegatePath = path.join(
      __dirname,
      './fixtures/AppDelegate52.swift'
    );
    const appDelegate = await fs.promises.readFile(appDelegatePath, 'utf-8');

    const result = swiftFileUpdater(appDelegate, '52.0.0');
    expect(result).toMatchSnapshot();
  });

  it('updates the AppDelegate53.swift with the method implementation without public override when sdk is equal to 53', async function () {
    const appDelegatePath = path.join(
      __dirname,
      './fixtures/AppDelegate53.swift'
    );
    const appDelegate = await fs.promises.readFile(appDelegatePath, 'utf-8');

    const result = swiftFileUpdater(appDelegate, '53.0.0');
    expect(result).toMatchSnapshot();
  });

  it('updates the AppDelegate53.swift with the method implementation having public override when sdk is greater than or equal to 54', async function () {
    const appDelegatePath = path.join(
      __dirname,
      './fixtures/AppDelegate53.swift'
    );
    const appDelegate = await fs.promises.readFile(appDelegatePath, 'utf-8');

    const result = swiftFileUpdater(appDelegate, '54.0.0');
    expect(result).toMatchSnapshot();
  });
});
